--- a/wp-content/languages/plugins/woocommerce-vi - Copy.po
+++ b/wp-content/languages/plugins/woocommerce-vi - Copy.po
@@ -2,17 +2,14 @@
 # This file is distributed under the same license as the Plugins - WooCommerce - Stable (latest release) package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2018-09-18 16:33+0700\n"
+"PO-Revision-Date: 2018-07-30 15:27:20+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: GlotPress/2.4.0-alpha\n"
 "Language: vi_VN\n"
 "Project-Id-Version: Plugins - WooCommerce - Stable (latest release)\n"
-"POT-Creation-Date: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
 
 #: includes/class-wc-countries.php:620
 msgid "Apartment, suite, unit etc."
@@ -11431,7 +11428,7 @@ msgstr "Tất cả sản phẩm"
 #: templates/cart/cart-totals.php:33 templates/cart/cart-totals.php:34
 #: templates/cart/mini-cart.php:72 templates/checkout/review-order.php:59
 msgid "Subtotal"
-msgstr "Tổng phụ"
+msgstr "Tổng cộng"
 
 #: templates/cart/shipping-calculator.php:30
 msgid "Calculate shipping"
@@ -11579,7 +11576,7 @@ msgstr "Giá thấp đến cao"
 
 #: includes/wc-template-functions.php:1303
 msgid "Sort by price: high to low"
-msgstr "\bGiá cao xuống thấp"
+msgstr "Giá cao xuống thấp"
 
 #: includes/wc-template-functions.php:1300
 msgid "Sort by average rating"
@@ -18785,6 +18782,7 @@ msgstr "Không hiểu"
 msgid "Action failed. Please refresh the page and retry."
 msgstr "Thao thác không thành công. Hãy tải lại trang và thử lại."
 
+#. #-#-#-#-#  woocommerce-code.pot (WooCommerce 3.4.5)  #-#-#-#-#
 #. Plugin Name of the plugin/theme
 #: includes/admin/class-wc-admin-assets.php:84
 #: includes/admin/class-wc-admin-menus.php:59
@@ -19579,7 +19577,7 @@ msgstr "Số thẻ"
 
 #: includes/abstracts/abstract-wc-order.php:1760
 msgid "Subtotal:"
-msgstr "Tổng phụ:"
+msgstr "Tổng cộng:"
 
 #: includes/admin/class-wc-admin-api-keys.php:91
 msgid "Add key"
